--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: snapping_sheet
+name: snapping_sheet_2
 description: A package that provides a sheet widget that snaps to different vertical & horizontal positions
-version: 3.1.0
+version: 3.1.1
 homepage: https://github.com/AdamJonsson/snapping_sheet
 
 environment:
